fixed small issues on mobile look

--- a/uslugi/uslugi-style.css
+++ b/uslugi/uslugi-style.css
@@ -77,7 +77,7 @@ header .cover h3 {
     display: flex;
     flex-direction: column;
     flex-flow: column nowrap;
-    width: 100%;
+    width: 97%;
     padding: 20px;
 }
 
@@ -182,7 +182,7 @@ body>footer>p:nth-child(1)>a {
 
     .description,
     .price-list {
-        margin: 2.5vw;
+        margin: 20px;
     }
 
     .wiki {
